# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: University of Washington <https://www.washington.edu>
# SPDX-FileContributor: 2014-25 Bradley M. Bell
# ----------------------------------------------------------------------------
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#
[build-system]
requires      = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'
# -----------------------------------------------------------------------------
[project]
name              = 'dismod_at'
version           = '2025.5.6'
description       = 'Disease Rates as Functions of Age and Time'
readme            = 'README.md'
requires-python   = '>=3.0'
keywords          = [ 'public health', 'disease', 'cause of death' ]
authors           = [
  {name  = 'Bradley M. Bell', email = 'bradbell@seanet.com'},
]
dependencies      = [
   'matplotlib',
   'numpy',
   'scipy',
]
classifiers       = [
   'Development Status :: 4 - Beta',
   'License            :: OSI Approved',
   'Operating System   :: OS Independent',
   'Environment        :: Console',
   'Intended Audience  :: Public Health Modelers',
   'Natural Language   :: English',
]
#
# https://github.com/pypa/setuptools/issues/4903
license           = { text = 'AGPL-3.0-or-later' }
#
# -----------------------------------------------------------------------------
[tool.setuptools]
packages = ['dismod_at']
#
[options]
package_dir   = 'at_cascade'
#
[project.urls]
'Homepage'    = 'https://github.com/bradbell/dismod_at'
'Bug Tracker' = 'https://github.com/bradbell/dismod_at/issues'

# dismod_at
# The script bin/dismodat.py is installed by ./CMakeLists.txt

# dismodat.py
# The program bin/dismod_at is installed by ../devel/CMakeLists.txt

# dismod-at
[project.scripts]
dismod-at = 'dismod_at:main'
