#  --------------------------------------------------------------------------
# dismod_at: Estimating Disease Rates as Functions of Age and Time
#           Copyright (C) 2014-22 University of Washington
#              (Bradley M. Bell bradbell@uw.edu)
#
# This program is distributed under the terms of the
#	     GNU Affero General Public License version 3.0 or later
# see http://www.gnu.org/licenses/agpl.txt
# ---------------------------------------------------------------------------
#
[metadata]
name         = dismod_at
version      = 20220208
description  = Disease Rates as Functions of Age and Time
author       = Bradley M. Bell
author_email = bradbell@uw.edu
license      = GNU Affero General Public License version 3.0 or later
url          = https://github.com/bradbell/dismod_at
classifiers  =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero

[options]
package_dir =
	dismod_at = dismod_at
packages =
	dismod_at
	dismod_at.ihme
scripts =
	bin/dismodat.py
	bin/fit_ihme.py
