# SPDX-License-Identifier: AGPL-3.0-or-later
# SPDX-FileCopyrightText: University of Washington <https://www.washington.edu>
# SPDX-FileContributor: 2014-22 Bradley M. Bell
# ----------------------------------------------------------------------------
#
[metadata]
name         = dismod_at
version      = 20221126
description  = Disease Rates as Functions of Age and Time
author       = Bradley M. Bell
author_email = bradbell@uw.edu
license      = GNU Affero General Public License version 3.0 or later
url          = https://github.com/bradbell/dismod_at
classifiers  =
   Programming Language :: Python :: 3
   License :: OSI Approved :: GNU Affero

[options]
package_dir =
   dismod_at = dismod_at
packages =
   dismod_at
   dismod_at.ihme
scripts =
   bin/dismodat.py
   bin/fit_ihme.py
